# rag-project

./: .gitignore  README.md  git_command.md  main.py  pyproject.toml  standard_test_cases.csv  test.py  test_cases.csv  test_chunk.py  test_rag.py  test_report_day10.csv  test_report_day11.csv  test_report_day12.csv  test_text_pdf_loader.py
chroma_db/: chroma.sqlite3
config/: config.yaml  settings.py
core/: __init__.py  bge_reranker.py  bm25_retriever.py  cache.py  cost_tracker.py  guardrails.py  llm_client.py  llm_factory.py  request_logger.py  vector_store_manager.py
data/: processed_documents.json  test.txt
data/raw/: test.txt
docs/: error_log.md  plan_log.md  record_notes.md
rag/: base_rag.py  hybrid_retriever.py  vector_store.py
temp_backup/: script1_read_file.py  script2_scan_folder.py  script3_clean_space.py  test_api.py
test_milvus.db/collections/test_collection/: schema.json
test_milvus.db/collections/test_collection/partitions/_default/data/: data_000001_000010.parquet
test_milvus.db/collections/test_collection/wal/: wal_data_000001.arrow
utils/: chunker.py  document_loader.py  marker_parser.py
utils/utils/: marker_parser.py
